# rpp

./: CMakeLists.txt  Readme.md
.github/workflows/: hip_build_tests.yaml  host_build_tests.yaml  ocl_build_tests.yaml
include/: rppdefs.h  rppi_advanced_augmentations.h  rppt.h  rppt_tensor_audio.h  rppt_tensor_audio_augmentations.h  rppt_tensor_augmentations.h  rppt_tensor_geometric_augmentations.h
src/include/cl/rpp/: handle.hpp
src/include/cpu/: rpp_cpu_common.hpp  rpp_cpu_simd.hpp
src/include/hip/: rpp_hip_common.hpp
src/include/hip/rpp/: handle.hpp
src/modules/: CMakeLists.txt  rppi_advanced_augmentations.cpp  rppi_fused_functions.cpp  rppi_validate.hpp  rppt_tensor_audio.cpp  rppt_tensor_audio_augmentations.cpp  rppt_tensor_augmentations.cpp  rppt_tensor_geometric_augmentations.cpp
src/modules/cl/: cl_advanced_aumentations.cpp  cl_declarations.hpp  handleocl.cpp
src/modules/cpu/: host_advanced_augmentations.hpp  host_fused_functions.hpp  host_tensor_audio.hpp  host_tensor_augmentations.hpp
src/modules/cpu/kernel/: audio_resample.hpp  crop_mirror_normalize.hpp  down_mixing.hpp  mel_filter_bank.hpp  non_silent_region_detection.hpp  normalize.hpp  pre_emphasis_filter.hpp  resample.hpp  resampling.hpp  resize.hpp  slice.hpp  spectrogram.hpp  to_decibels.hpp
src/modules/hip/: handle_api.cpp  handlehip.cpp  hip_tensor_audio_augmentations.hpp  hip_tensor_augmentations.hpp
src/modules/hip/kernel/: crop_mirror_normalize.hpp  normalize.hpp  resample.hpp  ricap.hpp
utilities/rpp-performancetests/HIP_NEW/: BatchPD_hip_pkd3.cpp  Tensor_hip_pkd3.cpp  Tensor_hip_pln1.cpp  Tensor_hip_pln3.cpp
utilities/rpp-performancetests/HOST_NEW/: BatchPD_host_pkd3.cpp  BatchPD_host_pln1.cpp  BatchPD_host_pln3.cpp  Tensor_host_pkd3.cpp  Tensor_host_pln1.cpp  Tensor_host_pln3.cpp  generatePerformanceLogs.py  rawLogsGenScript.sh
utilities/rpp-performancetests/HOST_NEW/audio/: CMakeLists.txt  Tensor_host_audio.cpp  generatePerformanceLogs.py  prof_log.txt  rawLogsGenScript.sh
utilities/rpp-unittests/HIP_NEW/: Tensor_hip_pkd3.cpp  Tensor_hip_pln1.cpp  Tensor_hip_pln3.cpp
utilities/rpp-unittests/HOST_NEW/: BatchPD_host_pkd3.cpp  BatchPD_host_pln1.cpp  BatchPD_host_pln3.cpp  CMakeLists.txt  Tensor_host_audio.cpp  Tensor_host_pkd3.cpp  Tensor_host_pln1.cpp  Tensor_host_pln3.cpp  tensor_host_audio.cpp  testAllScript.sh  testAllScriptAudio.sh
utilities/rpp-unittests/HOST_NEW/audio/: CMakeLists.txt  Tensor_host_audio.cpp  testAllScript.sh
utilities/rpp-unittests/REFERENCE_OUTPUTS_AUDIO/mel_filter_bank/: mel_filter_bank_ref_237-126133-0020.txt  mel_filter_bank_ref_237-134500-0001.txt  mel_filter_bank_ref_237-134500-0004.txt  mel_filter_bank_ref_2830-3979-0005.txt  mel_filter_bank_ref_2830-3980-0059.txt  mel_filter_bank_ref_6829-68769-0045.txt  mel_filter_bank_ref_6829-68769-0047.txt  mel_filter_bank_ref_6829-68771-0017.txt
utilities/rpp-unittests/REFERENCE_OUTPUTS_AUDIO/non_silent_region_detection/: non_silent_region_detection_ref_sample3.txt
utilities/rpp-unittests/REFERENCE_OUTPUTS_AUDIO/normalize/: normalize_ref_237-126133-0020.txt  normalize_ref_237-134500-0001.txt  normalize_ref_237-134500-0004.txt  normalize_ref_2830-3979-0005.txt  normalize_ref_2830-3980-0059.txt  normalize_ref_6829-68769-0045.txt  normalize_ref_6829-68769-0047.txt  normalize_ref_6829-68771-0017.txt
utilities/rpp-unittests/REFERENCE_OUTPUTS_AUDIO/pad/: pad_ref_237-126133-0020.txt  pad_ref_237-134500-0001.txt  pad_ref_237-134500-0004.txt  pad_ref_2830-3979-0005.txt  pad_ref_2830-3980-0059.txt  pad_ref_6829-68769-0045.txt  (+1 more)
utilities/test_suite/: common.py  rpp_test_suite_audio.h
utilities/test_suite/HIP/: Tensor_audio_hip.cpp  runAudioTests.py
utilities/test_suite/HOST/: Tensor_audio_host.cpp
(+50 files in other folders)
